@@ -1,3 +1,5 @@
+* Added optional parameter to regrid() operation to specify the axis boundaries.
+
 1.2 2018-04-09
 ~~~~~~~~~~~~~~
 
